--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مرآة الروح - رحلة الوعي</title>
-    <style>
-        /* هنا ستكون أكواد CSS */
-    </style>
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- مؤشر الفأرة المخصص -->
@@ -47,8 +45,6 @@
     <!-- رسالة الانتقال بين الشاشات -->
     <div id="transition-message"></div>
 
-    <script>
-        // هنا سيكون كود JavaScript
-    </script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 </body>
 </html>
